--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <section class="hero">
         <img src="path/to/your/image.jpg" alt="$NONE">
         <h2>Join the $NONE Revolution</h2>
-        <p>A memecoin to ask the question, "Who Wants to Run Against TRUMP?.</p>
+        <p>A memecoin mocking the current political landscape by supporting Trump and mocking Democrats.</p>
     </section>
     <section class="about">
         <h2>About $NONE</h2>
@@ -31,10 +31,10 @@
     <section class="roadmap">
         <h2>Roadmap</h2>
         <ul>
-            <li> YES WE CAN: Launch $NONE</li>
-            <li> YES WE CAN: Reach 77M FDV</li>
-            <li> YES WE CAN: Community building and marketing</li>
-            <li> YES WE CAN: CEX Listing MAYBE</li>
+            <li>Q1 2024: Launch $NONE</li>
+            <li>Q2 2024: Listing on major exchanges</li>
+            <li>Q3 2024: Community building and marketing</li>
+            <li>Q4 2024: Further development and partnerships</li>
         </ul>
     </section>
     <section class="community">
@@ -51,3 +51,4 @@
     </footer>
 </body>
 </html>
+
