--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <h1>$NONE - Democratic Candidate</h1>
     </header>
     <section class="hero">
-        <img src="path/to/your/image.jpg" alt="$NONE">
+        <img src="images/hero-image.jpg" alt="$NONE">
         <h2>Join the $NONE Revolution</h2>
         <p>A memecoin mocking the current political landscape by supporting Trump and mocking Democrats.</p>
     </section>
@@ -51,4 +51,5 @@
     </footer>
 </body>
 </html>
+
 
