--- a/index.html
+++ b/index.html
@@ -8,46 +8,50 @@
 </head>
 <body>
     <header>
-        <h1>$NONE - Democratic Candidate</h1>
+        <div class="hero">
+            <img src="images/None_MEMEcoin.jpg" alt="$NONE">
+            <div class="hero-text">
+                <h1>$NONE - Democratic Candidate</h1>
+                <p>Join the $NONE Revolution</p>
+                <a href="#about" class="cta-button">Learn More</a>
+            </div>
+        </div>
     </header>
-    <section class="hero">
-        <img src="images/hero-image.jpg" alt="$NONE">
-        <h2>Join the $NONE Revolution</h2>
-        <p>A memecoin mocking the current political landscape by supporting Trump and mocking Democrats.</p>
-    </section>
-    <section class="about">
-        <h2>About $NONE</h2>
-        <p>$NONE is a new memecoin created to humorously critique the Democratic Party's current candidate situation. Join us as we bring a bit of satire to the 2024 elections.</p>
-    </section>
-    <section class="how-to-buy">
-        <h2>How to Buy</h2>
-        <p>You can purchase $NONE on major cryptocurrency exchanges. Follow these steps to get started:</p>
-        <ol>
-            <li>Create a wallet</li>
-            <li>Buy ETH or BTC</li>
-            <li>Exchange for $NONE on listed exchanges</li>
-        </ol>
-    </section>
-    <section class="roadmap">
-        <h2>Roadmap</h2>
-        <ul>
-            <li>Q1 2024: Launch $NONE</li>
-            <li>Q2 2024: Listing on major exchanges</li>
-            <li>Q3 2024: Community building and marketing</li>
-            <li>Q4 2024: Further development and partnerships</li>
-        </ul>
-    </section>
-    <section class="community">
-        <h2>Join the Community</h2>
-        <p>Connect with other $NONE supporters on our social media platforms:</p>
-        <ul>
-            <li><a href="#">Twitter</a></li>
-            <li><a href="#">Reddit</a></li>
-            <li><a href="#">Telegram</a></li>
-        </ul>
-    </section>
+    <main>
+        <section id="about">
+            <h2>About $NONE</h2>
+            <p>$NONE is a new memecoin created to humorously critique the Democratic Party's current candidate situation. Join us as we bring a bit of satire to the 2024 elections.</p>
+        </section>
+        <section id="how-to-buy">
+            <h2>How to Buy</h2>
+            <ol>
+                <li>Create a wallet</li>
+                <li>Buy ETH or BTC</li>
+                <li>Exchange for $NONE on listed exchanges</li>
+            </ol>
+        </section>
+        <section id="roadmap">
+            <h2>Roadmap</h2>
+            <ul>
+                <li>Q1 2024: Launch $NONE</li>
+                <li>Q2 2024: Listing on major exchanges</li>
+                <li>Q3 2024: Community building and marketing</li>
+                <li>Q4 2024: Further development and partnerships</li>
+            </ul>
+        </section>
+        <section id="community">
+            <h2>Join the Community</h2>
+            <p>Connect with other $NONE supporters on our social media platforms:</p>
+            <ul>
+                <li><a href="#">Twitter</a></li>
+                <li><a href="#">Reddit</a></li>
+                <li><a href="#">Telegram</a></li>
+            </ul>
+        </section>
+    </main>
     <footer>
         <p>&copy; 2024 $NONE. All rights reserved.</p>
     </footer>
 </body>
 </html>
+
